# assembly_with_objects

./: CMakeLists.txt  README.md  package.xml
mesh/: Body1.stl  body_in_m.stl  leg.stl  leg_in_m_2.stl  leg_in_m_2.stl.dae
scripts/: chomp.py  collision_scene.py  dual_arm_planner.py  mesh.py  move_group_planner.py  stomp_test.py  string_transition_state.py  task_manager.py  test.py
src/: main.cpp  stomp_planner.cpp
