<?xml version="1.0"?>
<package>
  <name>assembly_with_object</name>
  <version>0.0.1</version>
  <description>The assembly_with_object package</description>

  <maintainer email="psh117@snu.ac.kr">Suhan Park</maintainer>

  <license>BSD</license>

  <author email="psh117@snu.ac.kr">Suhan Park</author>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>

  </export>
</package>
